# synoplayer

./: AGENTS.md  CONVENTIONS.md  Cargo.toml  README.md  build_debug.sh  build_release.sh  clean.sh
docs/: API_REFERENCE.md  SPECIFICATION.md
src/: error.rs  history.rs  lib.rs  main.rs  playback.rs
src/api/: album.rs  artist.rs  auth.rs  client.rs  composer.rs  cover.rs  favorites.rs  folder.rs  genre.rs  lyrics.rs  mod.rs  pin.rs  playlist.rs  radio.rs  search.rs  song.rs  stream.rs  types.rs
src/cache/: manager.rs  storage.rs
src/cli/: config.rs  library.rs  mod.rs  play.rs  playlist.rs  search.rs
src/config/: model.rs
src/credentials/: store.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/player/: engine.rs  mod.rs  queue.rs  state.rs
src/tui/: app.rs  handler.rs  mod.rs  ui.rs
tests/: api_parsing.rs  cli_integration.rs
tests/fixtures/: album_list_response.json  api_info_response.json  auth_login_success.json  error_no_permission.json  error_session_expired.json  pin_list_response.json  playlist_list_response.json  song_list_response.json
