[package]
name = "synoplayer"
version = "0.1.0"
edition = "2024"
description = "CLI audio player for Synology Audio Station"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dirs = "6"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ratatui = "0.29"
crossterm = "0.28"

# rodio disabled until system deps (libasound2-dev) are available
# rodio = "0.20"
# keyring disabled until system deps (libdbus-1-dev) are available
# keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
